[gd_scene load_steps=5 format=3 uid="uid://co44nr02auxaf"]

[ext_resource type="StyleBox" uid="uid://ivmclmvcwoko" path="res://Styles/FlatMask.tres" id="2_5n2kj"]
[ext_resource type="Texture2D" uid="uid://dc2oywla7xlix" path="res://Textures/progress_circular.svg" id="2_jn4fo"]
[ext_resource type="Script" path="res://Scripts/barContent.gd" id="2_utggd"]
[ext_resource type="Texture2D" uid="uid://kpgca6mnjaaf" path="res://Textures/bar_image.webp" id="3_lm0u7"]

[node name="Bar" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1368.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_utggd")

[node name="BackGround" type="Panel" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.494118, 0.760784, 0.713726, 1)
clip_children = 2
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_5n2kj")

[node name="TextureRect" type="TextureRect" parent="BackGround"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_lm0u7")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer1" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_top = 75

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer1"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="progressHigh" type="TextureProgressBar" parent="VBoxContainer/MarginContainer1/HBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
max_value = 5000.0
value = 3950.0
fill_mode = 4
radial_initial_angle = 225.0
radial_fill_degrees = 270.0
nine_patch_stretch = true
texture_under = ExtResource("2_jn4fo")
texture_progress = ExtResource("2_jn4fo")
tint_under = Color(0.8, 0.8, 0.8, 1)
tint_progress = Color(0.168627, 0.760784, 0.662745, 1)

[node name="progressStarting" type="TextureProgressBar" parent="VBoxContainer/MarginContainer1/HBoxContainer/Control/progressHigh"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
max_value = 5000.0
value = 1925.0
fill_mode = 4
radial_initial_angle = 225.0
radial_fill_degrees = 270.0
nine_patch_stretch = true
texture_progress = ExtResource("2_jn4fo")
tint_progress = Color(0.121569, 0.560784, 0.486275, 1)

[node name="progressLow" type="TextureProgressBar" parent="VBoxContainer/MarginContainer1/HBoxContainer/Control/progressHigh/progressStarting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
max_value = 5000.0
value = 500.0
fill_mode = 4
radial_initial_angle = 225.0
radial_fill_degrees = 270.0
nine_patch_stretch = true
texture_progress = ExtResource("2_jn4fo")
tint_progress = Color(0.0572, 0.26, 0.2262, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer1/HBoxContainer/Control/progressHigh/progressStarting/progressLow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="Growth" type="Label" parent="VBoxContainer/MarginContainer1/HBoxContainer/Control/progressHigh/progressStarting/progressLow/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Thin"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "90%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer1/HBoxContainer/Control/progressHigh/progressStarting/progressLow/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"Label_Bold"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "growth"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer1/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 40
alignment = 1

[node name="VBoxContainer1" type="VBoxContainer" parent="VBoxContainer/MarginContainer1/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 1

[node name="StartingPQ" type="Label" parent="VBoxContainer/MarginContainer1/HBoxContainer/HBoxContainer/VBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Light"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "1925"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer1/HBoxContainer/HBoxContainer/VBoxContainer1"]
layout_mode = 2
theme_type_variation = &"Label_Bold"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Starting PQ"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer1/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 1

[node name="CurrentPQ" type="Label" parent="VBoxContainer/MarginContainer1/HBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Light"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "3950
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer1/HBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_type_variation = &"Label_Bold"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Current PQ"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/MarginContainer1/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 1

[node name="Proficiency" type="Label" parent="VBoxContainer/MarginContainer1/HBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Light"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "intermediate"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer1/HBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_type_variation = &"Label_Bold"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "proficiency"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 20

[node name="ContentLabel" type="Label" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Bold"
theme_override_colors/font_color = Color(0.987013, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Writing PQ"
horizontal_alignment = 1
uppercase = true
